--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -59,6 +59,7 @@
     left: 0;
     opacity: 0;
     z-index: 1;
+    /* margin: 1rem 0; */
 }
 
 .container.right-panel-active .sign-in-container {
@@ -85,8 +86,7 @@ form {
     padding: 2rem;
     width: 100%;
     max-width: 400px;
-    /* Corrected: Use flex-start for multi-step form to prevent header overflow */
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     text-align: center;
 }
@@ -104,11 +104,13 @@ h3 {
     font-weight: 600;
 }
 
+/* ... other styles ... */
+
 .input-group {
     position: relative;
     width: 100%;
-    /* Corrected: Use a larger, consistent margin to hold the validation message */
-    margin-bottom: 2rem;
+    /* Combine margin and padding to create space */
+    margin-bottom: 2rem; 
 }
 
 .input-group i {
@@ -121,6 +123,16 @@ h3 {
     z-index: 10;
 }
 
+.input-group.invalid .validation-message {
+    display: block;
+    /* Position the message absolutely to not affect the layout */
+    position: absolute;
+    bottom: -1.25rem; /* Adjust this value to control spacing below the input */
+    left: 0;
+    width: 100%;
+    padding-left: 50px;
+    text-align: left;
+}
 .input-group i.password-toggle {
     left: auto !important;
     right: 18px !important;
@@ -218,11 +230,6 @@ select {
     margin-top: 5px;
     display: none;
     padding-left: 50px;
-    /* Corrected: Use absolute positioning to prevent form displacement */
-    position: absolute;
-    bottom: -1rem;
-    left: 0;
-    width: 100%;
 }
 
 .input-group.invalid input, .input-group.invalid select {
