--- a/frontend/src/pages/home.css
+++ b/frontend/src/pages/home.css
@@ -1,5 +1,5 @@
-/* --- Hero Section --- */
-.hero {
+/* --- Home Hero Section --- */
+.home-hero {
   min-height: 95vh;
   background-image: linear-gradient(
       rgba(240, 248, 255, 0.8),
@@ -16,7 +16,7 @@
   font-size: medium;
 }
 
-.hero-container {
+.home-hero-container {
   width: 100%;
   max-width: 1500px;
   margin: 0 auto;
@@ -25,7 +25,7 @@
   z-index: 2;
 }
 
-.hero-top-content {
+.home-hero-top-content {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 4rem;
@@ -33,13 +33,13 @@
   margin-bottom: 4rem;
 }
 
-.hero-left {
+.home-hero-left {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.hero-right {
+.home-hero-right {
   position: relative;
   display: flex;
   align-items: center;
@@ -71,7 +71,7 @@
   opacity: 0.5;
 }
 
-.hero h1 {
+.home-hero h1 {
   font-size: 3.5rem;
   margin-bottom: 1rem;
   color: var(--text-dark);
@@ -347,15 +347,15 @@
 }
 
 @media (max-width: 991px) {
-  .hero-top-content {
+  .home-hero-top-content {
     grid-template-columns: 1fr;
     gap: 3rem;
     text-align: center;
   }
-  .hero-left {
+  .home-hero-left {
     align-items: center;
   }
-  .hero-right {
+  .home-hero-right {
     order: -1;
     margin-bottom: 2rem;
   }
@@ -366,13 +366,13 @@
     margin: 0 auto;
   }
 
-  .hero h1 {
+  .home-hero h1 {
     font-size: 2.8rem;
   }
 }
 
 @media (max-width: 767px) {
-  .hero h1 {
+  .home-hero h1 {
     font-size: 2.5rem;
   }
   .hero-options {
